Server/esp_server/build/log/idf_py_stderr_output_58374
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:153:13: warning: 'tcp_server_write' defined but not used [-Wunused-function]
  153 | static void tcp_server_write(void *pvParameters) {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:95:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   95 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   42 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:41:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   41 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_read':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:323:55: error: '%s' directive output may be truncated writing up to 255 bytes into a region of size 244 [-Werror=format-truncation=]
  323 |         snprintf(filepath, sizeof(filepath), "/sdcard/%s", filename); // Assuming files are stored in /sdcard/
      |                                                       ^~   ~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:323:9: note: 'snprintf' output between 9 and 264 bytes into a destination of size 252
  323 |         snprintf(filepath, sizeof(filepath), "/sdcard/%s", filename); // Assuming files are stored in /sdcard/
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
